# EagSession1

./: .gitignore  README.md
eag_agentic_arch/: README.md  main.py  pyproject.toml  requirements.txt
eag_agentic_rag/: main.py  pyproject.toml
eag_agentic_rag/S7/: action.py
eag_agentic_rag/embedding/: embeddings_compare_ollama_api.py  embeddings_ollama_api.py
eag_agentic_rag/faiss_index/: index.faiss  index.pkl
eag_agentic_rag/history_index/: index.faiss  index.pkl
eag_agentic_rag/markitdown_expeditions/: basic_extraction.py
eag_agentic_rag/ollama_expeditions/: Modelfile-smollm2-16k  ollama_python_exp.py  ollama_python_exp2.py  readme.md
eag_agentic_rag/scraping_expeditions/: basic.py
eag_agentic_rag/url_rag/: config.yaml
eag_agentic_rag/url_rag/client/: action.py  client.py  config.yaml  debug_mcp.py  debugg.py  decision.py  embedding_provider.py  llm_provider.py  memory.py  perception.py  test_alternative.py  test_client.py  test_client_output.json  test_client_output.pickle  test_llm.py  test_mcp_client_server.py  test_mcp_client_server_basic.py  test_vector_search_client.py
eag_agentic_rag/url_rag/conversation_logs/: conversation_49b534861b014d48879d820f23a2d0a7_20250508_140051.json  conversation_49b534861b014d48879d820f23a2d0a7_20250508_140105.json  conversation_49b534861b014d48879d820f23a2d0a7_20250508_140115.json  conversation_8164a8961cd346e596e7f5b1830cc7a8_20250508_164005.json  conversation_8164a8961cd346e596e7f5b1830cc7a8_20250508_164014.json  conversation_8164a8961cd346e596e7f5b1830cc7a8_20250508_164021.json  conversation_c8b102adbb6346ef90e47f691c1ffe2f_20250508_143518.json  conversation_c8b102adbb6346ef90e47f691c1ffe2f_20250508_143548.json  conversation_c8b102adbb6346ef90e47f691c1ffe2f_20250508_143619.json  conversation_ff439329c97a4d32b1dfda3dd8f1111a_20250508_140352.json  conversation_ff439329c97a4d32b1dfda3dd8f1111a_20250508_140357.json  session_49b534861b014d48879d820f23a2d0a7.json  session_8164a8961cd346e596e7f5b1830cc7a8.json  session_c8b102adbb6346ef90e47f691c1ffe2f.json  session_ff439329c97a4d32b1dfda3dd8f1111a.json
eag_agentic_rag/url_rag/notebooks/: setup_raw.ipynb  setup_raw_client.ipynb  setup_raw_server.ipynb  tool_example.py
eag_agentic_rag/url_rag/server/: alternative_server.py  basic_server.py  config.yaml  models.py  server.py  test_mcp_tools.py  test_server.py  tools.py  utils.py  weburl_preprocess.py
eag_agentic_rag/url_rag/server/weburl_index/: index.faiss  index.pkl
eag_agentic_rag/url_rag/utility/: config.yaml  embedding_provider.py  llm_provider.py  utils.py
eag_agentic_rag/vector_db/: faiss_medium_ollama_lc.py
eag_multiserver_mcp/: README.md  Session.session  main.py  pyproject.toml
eag_multiserver_mcp/S8/S8 Share/: mcp_server_3.py
eag_multiserver_mcp/S8/S8 Share/config/: profiles.yaml
eag_multiserver_mcp/S8/S8 Share/core/: loop.py  session.py
eag_multiserver_mcp/S8/S8 Share/modules/: memory.py
eag_multiserver_mcp/client/: action.py  client.py  config.yaml  decision.py  embedding_provider.py  llm_provider.py  memory.py  perception.py  utils.py  weather_client.py
eag_multiserver_mcp/notebooks/: telegram_tool.ipynb
eag_multiserver_mcp/server/: calculator_server_sse.py  gmail_server.py  gsuite_server.py  websearch_server.py
eag_multiserver_mcp/server/gmail_tools/: mail_tools.py
eag_multiserver_mcp/server/gsuite_tools/: gsheet_builder.py
eag_multiserver_mcp/server/outputs/: formula_1_2025_driver_standings.json  gsheet_url_formula_1_2025_driver_standings.txt
eag_multiserver_mcp/server/search_tools/: websearch.py
eag_multiserver_mcp/server/telegram_tools/: scraper.py
planning_agent/S9_HW/: README.md  create_index.py  main.py  models.py  pyproject.toml  server2.py  server2_stream.py  server3.py  server3_stream.py  test_server1_stream.py  test_server2_stream.py  test_server_all.py
planning_agent/S9_HW/client/: llm_utils.py  profiles.yaml  test_action_engine.py  test_decision.py  test_session.py  tool_utils.py
planning_agent/S9_HW/client/core/: tool_call.py
planning_agent/S9_HW/client/modules/: README_DECISION.md  README_PERCEPTION.md  action.py  decision.py  perception.py
planning_agent/S9_HW/client/prompts/: decision_prompt.txt
planning_agent/S9_HW/documents/: economic.md
planning_agent/S9_HW/faiss_index/: metadata.json
planning_agent/S9_HW/server/: create_index.py  models.py  server1.py  server1_stream.py  server2_stream.py  server3_stream.py  test_server3_stream.py  test_server_all.py
planning_agent/S9_HW/tool_utils/: doc_tools.py  server_config.yaml
planning_agent/new_mcp/: README.md  SSE_README.md  STREAM_README.md  basic_client.py  basic_server.py  pyproject.toml  start_stream_server.py  test_client_sse.py  test_client_stdio.py  test_client_stream.py  test_extended_client.py  test_multi_server_client.py  test_tools_client.py  test_tools_client_stream.py  tools_server.py  tools_server_extended.py  tools_server_stdio.py  tools_server_stream.py
(+214 files in other folders)
