[project]
name = "eag-multiserver-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "dotenv==0.9.9",
    "filetype==1.2.0",
    "langchain==0.3.24",
    "langchain-core==0.3.56",
    "langsmith==0.3.37",
    "orjson==3.10.16",
    "ormsgpack==1.9.1",
    "packaging==24.2",
    "pydantic==2.11.3",
    "pydantic_core==2.33.1",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "typing_extensions==4.13.2",
    "loguru>=0.7.3",
    "google-search-results>=2.4.2",
    "mcp[cli]>=1.6.0",
    "langchain-openai>=0.3.14",
    "openai>=1.76.0",
    "langchain-mcp-adapters>=0.0.10",
    "ollama>=0.4.8",
    "playwright>=1.52.0",
    "beautifulsoup4>=4.13.4",
    "langchain-community>=0.3.23",
    "html2text>=2025.4.15",
    "scipy>=1.15.2",
    "langchain-ollama>=0.3.2",
    "faiss-cpu>=1.11.0",
    "langchain-text-splitters>=0.3.8",
    "tiktoken>=0.9.0",
    "httpx[http2]>=0.28.1",
    "python-telegram-bot>=22.0",
    "telethon>=1.40.0",
    "duckduckgo-search>=8.0.1",
    "pandas>=2.2.3",
    "oauth2client>=4.1.3",
    "gspread>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eag_multiserver_mcp"]

[tool.uv]
pip = { index-url = "https://pypi.org/simple" }
